// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Renders the UI snapshot correctly 1`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 2`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        className="chakra-select css-1ik61og"
        disabled={true}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
        data-disabled=""
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 3`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        aria-describedby="select-helperErrorText"
        aria-invalid={true}
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-3u73el"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={true}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Tom doesn't count as a sibling :(.",
        }
      }
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 4`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        aria-describedby="select-helperErrorText"
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Remember, Logan will judge you no matter who you pick.",
        }
      }
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 5`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
        <span>
           (required)
        </span>
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        aria-required={true}
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={true}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 6`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
        <span>
           (required)
        </span>
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        aria-required={true}
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={true}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 7`] = `
<div
  className="css-1u8qly9"
  data-testid="ds-select"
  id="select-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="select"
        id="select-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        className="chakra-select css-1ik61og"
        disabled={false}
        id="select"
        name="succession-sibling"
        onBlur={[Function]}
        onChange={[MockFunction]}
        onFocus={[Function]}
        required={false}
        value=""
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="select-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="select-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 8`] = `
<div
  className="css-1y4kn3e"
  data-testid="ds-select"
  id="chakra-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="chakra"
        id="chakra-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        className="chakra-select css-1ik61og"
        disabled={false}
        id="chakra"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="chakra-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;

exports[`Select Renders the UI snapshot correctly 9`] = `
<div
  className="css-1u8qly9"
  data-testid="props"
  id="props-componentWrapper"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <label
        className="css-1xdhyk6"
        data-testid="ds-label"
        htmlFor="props"
        id="props-label"
      >
        Which Succession sibling are you?
      </label>
    </div>
    <div
      className="chakra-select__wrapper css-42b2qy"
    >
      <select
        className="chakra-select css-1ik61og"
        disabled={false}
        id="props"
        name="succession-sibling"
        onBlur={[Function]}
        onFocus={[Function]}
        required={false}
      >
        <option>
          Kendall
        </option>
        <option>
          Shiv
        </option>
        <option>
          Connor
        </option>
        <option>
          Roman
        </option>
        <option>
          Tom
        </option>
      </select>
      <div
        className="chakra-select__icon-wrapper css-162mkon"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon chakra-select__icon css-1nreziu"
          data-file-name="SvgArrow"
          focusable={false}
          id="props-select-icon"
          role="presentation"
          style={
            {
              "color": "currentColor",
              "height": "1em",
              "width": "1em",
            }
          }
          title="arrow icon"
        />
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-bl03f5"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  >
    <div
      className="css-0"
    />
  </div>
</div>
`;
